--- a/app/login.html
+++ b/app/login.html
@@ -18,7 +18,7 @@
   <link rel="apple-touch-icon" sizes="144x144" href="img/favicon/apple-icon-144x144.png">
   <link rel="apple-touch-icon" sizes="152x152" href="img/favicon/apple-icon-152x152.png">
   <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="img/favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="img/favicon/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
@@ -50,7 +50,8 @@
   <div class="btn-close"></div>
   <ul class="menu">
     <li class="dropdown">
-      <a class="btn-catalog" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+      <a class="btn-catalog" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false"
+         aria-controls="collapseExample">
         <svg class="svg-icon">
           <use xlink:href="img/sprite.svg#burger"></use>
         </svg>
@@ -96,7 +97,8 @@
         </ul>
       </div>
     </li>
-    <li><a data-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample2">Handwerker &<br>
+    <li><a data-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false"
+           aria-controls="collapseExample2">Handwerker &<br>
       Meister</a>
       <div class="collapse" id="collapseExample2">
         <ul class="submenu">
@@ -116,7 +118,8 @@
         </ul>
       </div>
     </li>
-    <li><a data-toggle="collapse" href="#collapseExample3" role="button" aria-expanded="false" aria-controls="collapseExample3">Kunstler &<br>
+    <li><a data-toggle="collapse" href="#collapseExample3" role="button" aria-expanded="false"
+           aria-controls="collapseExample3">Kunstler &<br>
       Sammlerstücke</a>
       <div class="collapse" id="collapseExample3">
         <ul class="submenu">
@@ -136,7 +139,8 @@
         </ul>
       </div>
     </li>
-    <li><a data-toggle="collapse" href="#collapseExample4" role="button" aria-expanded="false" aria-controls="collapseExample4">Dienstleister &<br>
+    <li><a data-toggle="collapse" href="#collapseExample4" role="button" aria-expanded="false"
+           aria-controls="collapseExample4">Dienstleister &<br>
       Freiberufler</a>
       <div class="collapse" id="collapseExample4">
         <ul class="submenu">
@@ -156,7 +160,8 @@
         </ul>
       </div>
     </li>
-    <li><a data-toggle="collapse" href="#collapseExample5" role="button" aria-expanded="false" aria-controls="collapseExample5">Meisterklasse & <br>
+    <li><a data-toggle="collapse" href="#collapseExample5" role="button" aria-expanded="false"
+           aria-controls="collapseExample5">Meisterklasse & <br>
       Kreativbedarf</a>
       <div class="collapse" id="collapseExample5">
         <ul class="submenu">
@@ -186,7 +191,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12 d-flex align-items-center flex-wrap">
-              <p>Benutzer: 123 | Anbieter: 312 | Ausstellungen: 455</p>
+              <p>Benutzer: 13 | Anbieter: 5 | Ausstellungen: 14</p>
               <div class="contact-item">Kontakt: info@fairmaster.de</div>
             </div>
           </div>
@@ -199,9 +204,9 @@
               <a href="index.html" class="logo">fairmaster.de</a>
               <form method="post" class="form-search">
                 <label>
-                  <input type="text" placeholder="Suche....." name="search">
+                  <input type="text" class="form-control" placeholder="Suche....." name="search">
                 </label>
-                <button type="submit" class="btn">
+                <button type="submit" class="btn btn-primary">
                   <svg class="svg-icon">
                     <use xlink:href="img/sprite.svg#search"></use>
                   </svg>
@@ -209,7 +214,7 @@
               </form>
 
               <div class="header-box">
-                <a href="user.html" class="header-box__links">Login</a>
+                <a href="user.html" class="header-box__links">Anmelden</a>
                 <a href="#" class="header-box__links">Registrieren</a>
               </div>
 
@@ -401,8 +406,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="dropdown-item-menu"><a href="#">Handwerker &<br>
-                  Meister</a>
+                <li class="dropdown-item-menu"><a href="#">Handwerker & <br>Gewerbebetriebe</a>
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
@@ -466,8 +470,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="dropdown-item-menu"><a href="#">Kunstler &<br>
-                  Sammlerstücke</a>
+                <li class="dropdown-item-menu"><a href="#">Freiberufler & <br>Dienstleister</a>
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
@@ -531,8 +534,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="dropdown-item-menu"><a href="#">Dienstleister &<br>
-                  Freiberufler</a>
+                <li class="dropdown-item-menu"><a href="#">Künstler & <br>Designer</a>
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
@@ -596,8 +598,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="dropdown-item-menu"><a href="#">Meisterklasse & <br>
-                  Kreativbedarf</a>
+                <li class="dropdown-item-menu"><a href="#">Kreativbedarf & <br>Sammlerbörse</a>
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
@@ -670,230 +671,41 @@
 
     </header>
 
-    <section class="search-page">
+    <section class="contacts">
       <div class="container">
         <div class="row">
-          <div class="col-12">
-            <div class="form-filter">
-              <div class="row">
-                <div class="col-12 col-md-6 col-lg-4">
-                  <div class="form-filter-item">
-                    <label class="label-inp"><input type="text" placeholder="Wo suchen Sie?" name=""></label>
-                    <label class="label-select">
-                      <select name="select" class="select-filer">
-                        <option value="Umkreis">Umkreis</option>
-                        <option value="+ 5 km">+ 5 km</option>
-                        <option value="+ 10 km">+ 10 km</option>
-                        <option value="+ 15 km">+ 15 km</option>
-                        <option value="+ 20 km">+ 20 km</option>
-                        <option value="+ 50 km">+ 50 km</option>
-                        <option value="+ 100 km">+ 100 km</option>
-                      </select>
-                    </label>
-                  </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-3">
-                  <label class="label-inp"><input type="text" placeholder="Was suchen Sie?" name=""></label>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4">
-                  <div class="form-filter-price">
-                    <p>Preis</p>
-                    <span>Von</span>
-                    <label><input type="text" placeholder="(€)"></label>
-                    <span>bis</span>
-                    <label><input type="text" placeholder="(€)"></label>
-                  </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-1">
-                  <button type="submit" class="btn btn-danger btn-lg">
-                    <svg class="svg-icon">
-                      <use xlink:href="img/sprite.svg#search"></use>
-                    </svg>
-                  </button>
-                </div>
-<!--                <div class="col-12 col-lg-6">-->
-<!--                  <select name="select" class="select-drop">-->
-<!--                    <option value="Auswahl verfeinern">Auswahl verfeinern</option>-->
-<!--                    <option value="Auswahl verfeinern">Auswahl verfeinern</option>-->
-<!--                    <option value="Auswahl verfeinern">Auswahl verfeinern</option>-->
-<!--                  </select>-->
-<!--                </div>-->
-              </div>
-            </div>
-          </div>
-        </div>
+          <div class="col-12 col-md-6 offset-md-3">
+            <div class="login-wrapper">
+              <h3>Login</h3>
+              <form method="post" class="form form-login form-modal">
+                <label>
+                  <span class="input-title">E-Mail <sup>*</sup></span>
+                  <input id="input_mail" class="required email forms-control" type="email" name="mail"
+                         placeholder="Ihre E-Mail Adresse" required="">
+                </label>
+                <label>
+                  <span class="input-title">Passwort <sup>*</sup></span>
+                  <input type="password" class="required pass forms-control" name="password" placeholder="Passwort"
+                         required="">
+                </label>
+                <label>
+                </label>
 
-        <div class="row">
-          <div class="col-12">
-            <div class="filter-result-wrapper">
-              <div class="filter-result">
-                1- 24 von 459 Ergebnisse für Ihre Suche nach: <strong>Fliesen legen</strong>
-              </div>
-              <ul class="nav nav-tabs" id="myTab" role="tablist">
-                <li class="nav-item" role="presentation">
-                  <a class="nav-link active" id="home-tab" data-toggle="tab" href="#tab1" role="tab"
-                     aria-controls="tab1"
-                     aria-selected="true">
-                    <svg class="svg-icon">
-                      <use xlink:href="img/sprite.svg#list"></use>
-                    </svg>
+                <div class="form-btn-group">
+                  <button type="submit" class="btn btn-accent">Anmelden</button>
+                  <a href="#" data-toggle="modal" data-target="#modal__password" class="btn color-accent">
+                    Passwort vergessen?
                   </a>
-                </li>
-                <li class="nav-item" role="presentation">
-                  <a class="nav-link" id="profile-tab" data-toggle="tab" href="#tab2" role="tab" aria-controls="tab2"
-                     aria-selected="false">
-                    <svg class="svg-icon">
-                      <use xlink:href="img/sprite.svg#grid"></use>
-                    </svg>
+                  <a href="#" data-toggle="modal" data-target="#modal__email" class="btn color-accent">
+                    Keine Bestätigungs-E-Mail erhalten?
                   </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-12">
-            <div class="tab-content" id="myTabContent">
-              <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="home-tab">
-                <div class="row">
-                  <div class="col-12">
-                    <div class="card-product">
-                      <a href="#" class="card-product__img"><img src="img/public1.jpeg" alt=""></a>
-                      <div class="card-product__body">
-                        <div class="card-product__head">
-                          <div class="card-product__sub-box">
-                            <h3>Fliesen legen</h3>
-                            <div class="rating-wrapper">
-                              <ul class="list-rating">
-                                <li>
-                                  <svg class="svg-icon">
-                                    <use xlink:href="img/sprite.svg#star"></use>
-                                  </svg>
-                                </li>
-                                <li>
-                                  <svg class="svg-icon">
-                                    <use xlink:href="img/sprite.svg#star"></use>
-                                  </svg>
-                                </li>
-                                <li>
-                                  <svg class="svg-icon">
-                                    <use xlink:href="img/sprite.svg#star"></use>
-                                  </svg>
-                                </li>
-                                <li>
-                                  <svg class="svg-icon">
-                                    <use xlink:href="img/sprite.svg#star"></use>
-                                  </svg>
-                                </li>
-                                <li>
-                                  <svg class="svg-icon">
-                                    <use xlink:href="img/sprite.svg#star"></use>
-                                  </svg>
-                                </li>
-                              </ul>
-                              <div class="rating-val">(32)</div>
-                            </div>
-                          </div>
-                          <div class="price">99,99 Euro <span>/ Stunde</span></div>
-                        </div>
-                        <div class="card-product__content">
-<!--                          <div class="box-text">-->
-<!--                            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor-->
-<!--                              invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et-->
-<!--                              accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata-->
-<!--                              sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur </p>-->
-<!--                          </div>-->
-                        </div>
-                        <div class="card-product__footer">
-                          <div class="profile-info__head">
-                            <a href="#" class="profile-info__links links-favorite">
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#heart"></use>
-                              </svg>
-                              <span>Merken |</span>
-                            </a>
-                            <a href="#" class="profile-info__links">
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#user"></use>
-                              </svg>
-                              <span>Zu dem Anbieter</span>
-                            </a>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
                 </div>
-              </div>
-              <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="profile-tab">
-                <div class="row">
-                  <div class="col-12 col-sm-6">
-                    <div class="card-product card-product-col">
-                      <a href="#" class="card-product__img"><img src="img/public1.jpeg" alt=""></a>
-                      <div class="card-product__body">
-                        <div class="card-product__footer">
-                          <div class="profile-info__head">
-                            <a href="#" class="profile-info__links links-favorite">
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#heart"></use>
-                              </svg>
-                              <span>Merken |</span>
-                            </a>
-                            <a href="#" class="profile-info__links">
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#user"></use>
-                              </svg>
-                              <span>Zu dem Anbieter</span>
-                            </a>
-                          </div>
-                        </div>
-                        <div class="card-product__sub-box">
-                          <h3>Fliesen legen</h3>
-                          <div class="rating-wrapper">
-                            <ul class="list-rating">
-                              <li>
-                                <svg class="svg-icon">
-                                  <use xlink:href="img/sprite.svg#star"></use>
-                                </svg>
-                              </li>
-                              <li>
-                                <svg class="svg-icon">
-                                  <use xlink:href="img/sprite.svg#star"></use>
-                                </svg>
-                              </li>
-                              <li>
-                                <svg class="svg-icon">
-                                  <use xlink:href="img/sprite.svg#star"></use>
-                                </svg>
-                              </li>
-                              <li>
-                                <svg class="svg-icon">
-                                  <use xlink:href="img/sprite.svg#star"></use>
-                                </svg>
-                              </li>
-                              <li>
-                                <svg class="svg-icon">
-                                  <use xlink:href="img/sprite.svg#star"></use>
-                                </svg>
-                              </li>
-                            </ul>
-                            <div class="rating-val">(32)</div>
-                          </div>
-                        </div>
-                        <div class="price">99,99 Euro <span>/ Stunde</span></div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
+              </form>
             </div>
           </div>
         </div>
       </div>
     </section>
-
-
   </div>
 
 
@@ -973,6 +785,5 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script src="js/common.js"></script>
-
 </body>
 </html>
