--- a/app/favorites.html
+++ b/app/favorites.html
@@ -36,6 +36,9 @@
         integrity="sha512-H9jrZiiopUdsLpg94A333EfumgUBpO9MdbxStdeITo+KEIMaNfHNvwyjjDJb+ERPaRS6DpyRlKbvPUasNItRyw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"/>
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"/>
   <link rel="stylesheet" href="css/libs.min.css">
   <link rel="stylesheet" href="css/main.css">
 
@@ -672,11 +675,11 @@
             </div>
             <ul class="user-menu">
               <li><a href="#">Mein Konto</a></li>
-              <li><a href="#">Konto verwalten</a></li>
-              <li><a href="#">Nachrichten</a></li>
-              <li><a href="#">Profil verwalten</a></li>
-              <li><a href="#">Publikationen verwalten </a></li>
-              <li><a href="#">Paket verwalten</a></li>
+              <li><a href="edit-password.html">Konto verwalten</a></li>
+              <li><a href="mail-list.html">Nachrichten</a></li>
+              <li><a href="profile-edit.html">Profil verwalten</a></li>
+              <li><a href="product-list.html">Publikationen verwalten </a></li>
+              <li><a href="pack-info.html">Paket verwalten</a></li>
             </ul>
           </div>
           <div class="col-12 col-lg-9">
